<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_scholar_main"
    tools:context=".Scholarship_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13953489" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_tammudu"
        android:text="@string/main_title"
        android:textColor="#81858a"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/sub_title_main1"
        android:textColor="#738191"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintVertical_bias="0.621" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/sub_title_main2"
        android:textColor="#738191"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal3"
        app:layout_constraintVertical_bias="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="592dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/sub_title_main3"
        android:textColor="#738191"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal4"
        app:layout_constraintVertical_bias="0.621" />

    <ImageView
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="156dp"
        android:alpha="0.5"
        android:src="@drawable/pic_sch_international"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintVertical_bias="0.783" />

    <ImageView
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="320dp"
        android:alpha="0.5"
        android:src="@drawable/pic_sch_nsch"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal3"
        app:layout_constraintVertical_bias="0.886" />

    <ImageView
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="484dp"
        android:alpha="0.5"
        android:src="@drawable/pic_sch_program"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal4"
        app:layout_constraintVertical_bias="0.915" />

</androidx.constraintlayout.widget.ConstraintLayout>